--- a/Application/Home/View/default/Document/index_manual.html
+++ b/Application/Home/View/default/Document/index_manual.html
@@ -165,7 +165,7 @@
 <block name="top-nav"></block>
 
 <block name="main-nav">
-    <nav class="manual-nav navbar navbar-inverse navbar-static-top" role="navigation">
+    <nav class="manual-nav navbar navbar-inverse navbar-fixed-top" role="navigation">
         <div class="container-fluid">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse-main">
